--- a/Rep_M_MAnova_success_1.Rmd
+++ b/Rep_M_MAnova_success_1.Rmd
@@ -4,6 +4,9 @@ output: html_document
 date: "2023-06-14"
 ---
 
+```{r}
+library(MANOVA.RM)
+```
 
 ```{r}
 total_long <- read.csv(r"(C:\Users\User\OneDrive - University of Wyoming\Desktop - Copy\Lab\abcd\0_Working\Clean data\Finalized\MATCHED_subs_with_2yeardata_bmiperc_long.csv)")
